--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -19,10 +19,9 @@
                             <h2 class="footer-heading mb-4">Quick Links</h2>
                             <ul class="list-unstyled">
                                 <li><a th:href="@{/terms}" class="smoothscroll">Terms</a></li>
-                                <li><a href="#about-section" class="smoothscroll">Policy</a></li>
                                 <li><a th:href="@{/about}" class="smoothscroll">About Us</a></li>
-                                <li><a href="#services-section" class="smoothscroll">Services</a></li>
-                                <li><a href="#testimonials-section" class="smoothscroll">Testimonials</a></li>
+                                <li><a th:href="@{/services}" class="smoothscroll">Services</a></li>
+                                <li><a th:href="@{/testimonials}" class="smoothscroll">Testimonials</a></li>
                                 <li><a th:href="@{/contact}" class="smoothscroll">Contact Us</a></li>
                             </ul>
                         </div>
