--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,9 +42,9 @@
                 <div class="single-text owl-carousel">
                     <div class="slide">
                         <h1 class="text-uppercase" data-aos="fade-up">Banking Solutions</h1>
-                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit. Repudiandae minima delectus accusamus accusantium deleniti
-                            libero excepturi porro illo.</p>
+                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Experience top-tier banking
+                            solutions with us. Our expertise and dedication set us apart, ensuring your financial needs
+                            are met seamlessly. Trust the best for your banking success.</p>
                         <div data-aos="fade-up" data-aos-delay="100">
                             <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
                         </div>
@@ -52,10 +52,8 @@
 
                     <div class="slide">
                         <h1 class="text-uppercase" data-aos="fade-up">Financing Solutions</h1>
-                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit.
-                            Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
-                            illo.</p>
+                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Unlock your financial potential
+                            with our expert financing solutions. Tailored for your success.</p>
                         <div data-aos="fade-up" data-aos-delay="100">
                             <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
                         </div>
@@ -63,10 +61,8 @@
 
                     <div class="slide">
                         <h1 class="text-uppercase" data-aos="fade-up">Savings Accounts</h1>
-                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit.
-                            Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
-                            illo.</p>
+                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Maximize your savings with our
+                            interest-bearing accounts. Deposit confidently and watch your savings grow.</p>
                         <div data-aos="fade-up" data-aos-delay="100">
                             <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
                         </div>
