--- a/src/main/resources/templates/admin_panel.html
+++ b/src/main/resources/templates/admin_panel.html
@@ -63,6 +63,12 @@
                             Admins
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="deletedUsersTab" data-toggle="tab" href="#deletedUsers" role="tab"
+                           aria-controls="adminUsers" aria-selected="false">
+                            Deleted Users
+                        </a>
+                    </li>
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="allUsers" role="tabpanel" aria-labelledby="allUsersTab">
@@ -95,7 +101,7 @@
                                             <button class="action-button" type="submit" th:text="#{user.unblock}"/>
                                         </form>
                                         <form th:action="@{'/users/' + ${user.id} + '/admin'}" method="post"
-                                              th:if="${session.currentUserLevel > 1}">
+                                              th:if="${session.currentUserLevel == 1}">
                                             <button class="action-button" type="submit">Set as Admin</button>
                                         </form>
 
@@ -144,8 +150,8 @@
                                             <button class="action-button" type="submit" th:text="#{user.unblock}"/>
                                         </form>
                                         <form th:action="@{'/users/' + ${user.id} + '/admin'}" method="post"
-                                              th:if="${session.currentUserLevel > 1}">
-                                            <button class="action-button" type="submit">Set as Admin</button>
+                                              th:if="${session.currentUserLevel == 1}">
+                                            <button class="action-button" type="submit">Manually verify</button>
                                         </form>
 
 
@@ -163,6 +169,153 @@
                             </ul>
                         </div>
                     </div>
+
+                    <div class="tab-pane fade" id="blockedUsers" role="tabpanel" aria-labelledby="blockedUsers">
+                        <ul class="user-list">
+                            <th:block th:each="user : ${usersBlockedPage}">
+                                <li class="user-item">
+                                    <div class="user-name" th:text="${user.username}"></div>
+                                    <div class="user-details" style="display: none;">
+                                        <!-- Additional user information here -->
+                                        <p><i th:text="#{user.email_details} + ' '"/><span
+                                                th:text="${user.email}"></span>
+                                        </p>
+                                        <p><i th:text="#{user.level_details} + ' '"/><span
+                                                th:text="${user.userLevel}"></span></p>
+                                        <p th:if="${user.phone != null}"><i th:text="#{user.phone_details} + ' '"/><span
+                                                th:text="${user.phone}"></span></p>
+                                        <!-- Add more details as needed -->
+                                    </div>
+                                    <div class="action-buttons">
+                                        <form th:action="@{'/users/' + ${user.id} + '/delete'}" method="post"
+                                              th:if="${session.currentUserLevel > 0}">
+                                            <button class="action-button" type="submit" th:text="#{user.delete}"/>
+                                        </form>
+                                        <form th:action="@{'/users/' + ${user.id} + '/unblock'}" method="post"
+                                              th:if="${session.currentUserLevel > 0}">
+                                            <button class="action-button" type="submit" th:text="#{user.unblock}"/>
+                                        </form>
+                                        <form th:action="@{'/users/' + ${user.id} + '/admin'}" method="post"
+                                              th:if="${session.currentUserLevel == 1}">
+                                            <button class="action-button" type="submit">Set as Admin</button>
+                                        </form>
+
+
+                                    </div>
+                                </li>
+                            </th:block>
+                        </ul>
+                        <br/>
+                        <div class="text-center" th:if="${usersBlockedPages > 1}">
+                            <ul class="pagination">
+                                <li th:each="page : ${#numbers.sequence(0, usersBlockedPages - 1)}"
+                                    th:class="${page == usersBlockedPages.number ? 'active' : ''}">
+                                    <a th:href="@{/cpanel(page=${page})}" th:text="'Page ' + ${page + 1}"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="tab-pane fade" id="adminUsers" role="tabpanel" aria-labelledby="adminUsers">
+                        <ul class="user-list">
+                            <th:block th:each="user : ${usersAdminPage}">
+                                <li class="user-item">
+                                    <div class="user-name" th:text="${user.username}"></div>
+                                    <div class="user-details" style="display: none;">
+                                        <!-- Additional user information here -->
+                                        <p><i th:text="#{user.email_details} + ' '"/><span
+                                                th:text="${user.email}"></span>
+                                        </p>
+                                        <p><i th:text="#{user.level_details} + ' '"/><span
+                                                th:text="${user.userLevel}"></span></p>
+                                        <p th:if="${user.phone != null}"><i th:text="#{user.phone_details} + ' '"/><span
+                                                th:text="${user.phone}"></span></p>
+                                        <!-- Add more details as needed -->
+                                    </div>
+                                    <div class="action-buttons">
+                                        <form th:action="@{'/users/' + ${user.id} + '/delete'}" method="post"
+                                              th:if="${session.currentUserLevel > 0}">
+                                            <button class="action-button" type="submit" th:text="#{user.delete}"/>
+                                        </form>
+                                        <form th:action="@{'/users/' + ${user.id} + '/block'}" method="post"
+                                              th:if="${session.currentUserLevel > 0}">
+                                            <button class="action-button" type="submit" th:text="#{user.block}"/>
+                                        </form>
+                                        <form th:action="@{'/users/' + ${user.id} + '/unblock'}" method="post"
+                                              th:if="${session.currentUserLevel > 0}">
+                                            <button class="action-button" type="submit" th:text="#{user.unblock}"/>
+                                        </form>
+                                        <form th:action="@{'/users/' + ${user.id} + '/admin'}" method="post"
+                                              th:if="${session.currentUserLevel == 1}">
+                                            <button class="action-button" type="submit">Remove as Admin</button>
+                                        </form>
+
+
+                                    </div>
+                                </li>
+                            </th:block>
+                        </ul>
+                        <br/>
+                        <div class="text-center" th:if="${usersAdminPages > 1}">
+                            <ul class="pagination">
+                                <li th:each="page : ${#numbers.sequence(0, usersAdminPages - 1)}"
+                                    th:class="${page == usersAdminPages.number ? 'active' : ''}">
+                                    <a th:href="@{/cpanel(page=${page})}" th:text="'Page ' + ${page + 1}"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="tab-pane fade" id="deletedUsers" role="tabpanel" aria-labelledby="deletedUsers">
+                        <ul class="user-list">
+                            <th:block th:each="user : ${usersDeletedPage}">
+                                <li class="user-item">
+                                    <div class="user-name" th:text="${user.username}"></div>
+                                    <div class="user-details" style="display: none;">
+                                        <!-- Additional user information here -->
+                                        <p><i th:text="#{user.email_details} + ' '"/><span
+                                                th:text="${user.email}"></span>
+                                        </p>
+                                        <p><i th:text="#{user.level_details} + ' '"/><span
+                                                th:text="${user.userLevel}"></span></p>
+                                        <p th:if="${user.phone != null}"><i th:text="#{user.phone_details} + ' '"/><span
+                                                th:text="${user.phone}"></span></p>
+                                        <!-- Add more details as needed -->
+                                    </div>
+                                    <div class="action-buttons">
+                                        <form th:action="@{'/users/' + ${user.id} + '/delete'}" method="post"
+                                              th:if="${session.currentUserLevel > 0}">
+                                            <button class="action-button" type="submit" th:text="#{user.delete}"/>
+                                        </form>
+                                        <form th:action="@{'/users/' + ${user.id} + '/block'}" method="post"
+                                              th:if="${session.currentUserLevel > 0}">
+                                            <button class="action-button" type="submit" th:text="#{user.block}"/>
+                                        </form>
+                                        <form th:action="@{'/users/' + ${user.id} + '/unblock'}" method="post"
+                                              th:if="${session.currentUserLevel > 0}">
+                                            <button class="action-button" type="submit" th:text="#{user.unblock}"/>
+                                        </form>
+                                        <form th:action="@{'/users/' + ${user.id} + '/admin'}" method="post"
+                                              th:if="${session.currentUserLevel > 1}">
+                                            <button class="action-button" type="submit">Set as Admin</button>
+                                        </form>
+
+
+                                    </div>
+                                </li>
+                            </th:block>
+                        </ul>
+                        <br/>
+                        <div class="text-center" th:if="${usersDeletedPages > 1}">
+                            <ul class="pagination">
+                                <li th:each="page : ${#numbers.sequence(0, usersDeletedPages - 1)}"
+                                    th:class="${page == usersDeletedPages.number ? 'active' : ''}">
+                                    <a th:href="@{/cpanel(page=${page})}" th:text="'Page ' + ${page + 1}"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
