--- a/src/main/resources/templates/user_contacts.html
+++ b/src/main/resources/templates/user_contacts.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Wallet Project - Contacts</title>
+    <title>The Wallet Project - Contact list</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -28,11 +28,35 @@
 </div>
 
 <div th:replace="fragments/header :: header"></div>
-<div th:style="'background-color: #cccccc;'"
+<div class="site-blocks-cover overlay" th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
      data-aos="fade" id="home-section">
+
     <div class="container">
         <div class="row align-items-center justify-content-center">
-            <h3>User contacts sample</h3>
+            <div class="col-md-10 mt-lg-5 text-center">
+
+
+
+                <div class="container">
+                    <h3 th:text="#{user.contact_list}" />
+
+                    <input class="form-control form-control222" type="text" id="searchInput" placeholder="Type here to filter the usernames...">
+
+                    <table>
+                        <tbody id="userTableBody">
+                        <tr th:each="user : ${contacts}">
+                            <td>
+                                <a th:href="@{/users/{userId}(userId=${user.id})}" th:text="${user.username}">Username</a>
+                            </td>
+                            <!-- Add more columns as needed -->
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+
+
+            </div>
         </div>
     </div>
 </div>
@@ -51,5 +75,6 @@
 <script th:src="@{/js/jquery.sticky.js}"></script>
 <script th:src="@{/js/isotope.pkgd.min.js}"></script>
 <script th:src="@{/js/main.js}"></script>
+<script th:src="@{/js/user.finder.bar.js}"></script>
 </body>
 </html>
