--- a/src/main/resources/templates/user_no_contacts.html
+++ b/src/main/resources/templates/user_no_contacts.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>The Wallet Project - Contact form success</title>
+    <title>The Wallet Project - Error 415</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -33,8 +33,7 @@
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-10 mt-lg-5 text-center">
-                <h1 th:text="#{site.contact_title}" /><br/>
-                <p th:text="#{site.contact_msg}" />
+                <h3 th:text="#{user.contact_list_empty}"/>
             </div>
 
         </div>
