--- a/src/main/resources/templates/user_request_funds.html
+++ b/src/main/resources/templates/user_request_funds.html
@@ -75,27 +75,7 @@
 <script th:src="@{/js/jquery.sticky.js}"></script>
 <script th:src="@{/js/isotope.pkgd.min.js}"></script>
 <script th:src="@{/js/main.js}"></script>
-
-
-<script>
-    const searchInput = document.getElementById('searchInput');
-    const userTableBody = document.getElementById('userTableBody');
-
-    searchInput.addEventListener('input', function () {
-        const searchTerm = searchInput.value.trim().toLowerCase();
-        const rows = userTableBody.getElementsByTagName('tr');
-
-        for (const row of rows) {
-            const username = row.cells[0].textContent.trim().toLowerCase();
-
-            if (username.includes(searchTerm)) {
-                row.style.display = '';
-            } else {
-                row.style.display = 'none';
-            }
-        }
-    });
-</script>
+<script th:src="@{/js/user.finder.bar.js}"></script>
 
 </body>
 </html>
