--- a/src/main/resources/templates/user_contact_already_added.html
+++ b/src/main/resources/templates/user_contact_already_added.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>The Wallet Project - Contact list</title>
+    <title>The Wallet Project - Contact add success</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -17,7 +16,6 @@
     <link rel="stylesheet" th:href="@{/fonts/flaticon/flaticon.css}"/>
     <link rel="stylesheet" th:href="@{/css/aos.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
-    <link rel="stylesheet" th:href="@{/css/user.contacts.css}"/>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -35,32 +33,10 @@
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-10 mt-lg-5 text-center">
-
-
-
-                <div class="container">
-                    <h3 th:text="#{user.contact_list}" />
-
-                    <input class="form-control form-control222" type="text" id="searchInput" placeholder="Type here to filter the usernames...">
-
-                    <table id="contactTable">
-                        <tbody id="userTableBody">
-                        <tr th:each="user : ${contacts}">
-                            <td class="username-cell">
-                                <a th:href="@{/users/{userId}(userId=${user.id})}" th:text="${user.username}">Username</a>
-                            </td>
-                            <td class="remove-cell">
-                                <a class="remove-link" th:href="@{/users/contacts/remove/{user_id}(user_id=${user.id})}" th:text="#{user.remove_from_contacts}" />
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-
-                </div>
-
-
-
+                <h1 th:text="#{user.contact_already_added}" /><br/>
+                <p th:text="${targetUser.getFirstName()} + ' ' + ${targetUser.getLastName()} + ' ' + #{user.contact_already_added_msg}"></p>
             </div>
+
         </div>
     </div>
 </div>
@@ -79,6 +55,5 @@
 <script th:src="@{/js/jquery.sticky.js}"></script>
 <script th:src="@{/js/isotope.pkgd.min.js}"></script>
 <script th:src="@{/js/main.js}"></script>
-<script th:src="@{/js/user.finder.bar.js}"></script>
 </body>
 </html>
