--- a/src/main/resources/static/css/verification.css
+++ b/src/main/resources/static/css/verification.css
@@ -4,23 +4,25 @@
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
 }
 
 #uploadForm {
-    background-color: #fff;
     border-radius: 5px;
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
+    display: flex;
+    align-items: center;
 }
 
 .upload-container {
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
-#idCardPreview,
-#selfiePreview {
+.upload-container img {
     max-width: 150px;
     display: none;
     margin-top: 10px;
