--- a/src/main/resources/templates/user_upload_id_success.html
+++ b/src/main/resources/templates/user_upload_id_success.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>The Wallet Project - Error 401</title>
+    <title>The Wallet Project - Update success</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -33,8 +33,8 @@
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-10 mt-lg-5 text-center">
-                <h1 th:text="#{server.unauthorized_title}" /><br/>
-                <p th:text="#{server.unauthorized}" />
+                <h1 th:text="#{user.upload_id_success}"></h1><br/>
+                <p th:text="#{user.upload_id_success_msg}"></p>
             </div>
 
         </div>
