Added Cards section to the header nav bar.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -62,6 +62,8 @@
 
                                         <li><a th:href="@{/wallet}" class="nav-link"
                                                th:text="#{user.my_wallet}"/></li>
+                                        <li><a th:href="@{/cards}" class="nav-link"
+                                               th:text="#{user.my_cards}"/></li>
                                         <li><a th:href="@{/transactions}" class="nav-link"
                                                th:text="#{user.my_transactions}"/></li>
                                         <li><a th:href="@{/users/request}" class="nav-link"
