--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -26,7 +26,7 @@
                         <nav class="site-navigation position-relative text-right" role="navigation">
 
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                                <li><a href="#home-section" class="nav-link">Home</a></li>
+                                <li><a th:href="@{/}" class="nav-link">Home</a></li>
 
                                 <li th:if="${session.currentUser == null}">
                                     <a th:href="@{/auth/login}" class="nav-link" th:text="#{user.login}"/>
