Implemented display wallets for user and create a new wallet.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -60,8 +60,8 @@
                                             </ul>
                                         </li>
 
-                                        <li><a th:href="@{/wallet}" class="nav-link"
-                                               th:text="#{user.my_wallet}"/></li>
+                                        <li><a th:href="@{/wallets}" class="nav-link"
+                                               th:text="#{user.my_wallets}"/></li>
                                         <li><a th:href="@{/cards}" class="nav-link"
                                                th:text="#{user.my_cards}"/></li>
                                         <li><a th:href="@{/transactions}" class="nav-link"
