--- a/src/main/resources/templates/admin_verification_panel.html
+++ b/src/main/resources/templates/admin_verification_panel.html
@@ -39,7 +39,7 @@
                 <h3 th:text="#{user.id_verification}"/>
                 <div class="user-images justify-content-center">
                     <div class="user-profile">
-                        <form th:action="@{/approve}" method="post" class="image-form">
+                        <form th:action="@{'/approve/' + ${targetUser.id}}" method="post" class="image-form">
                             <table class="image-table">
                                 <tr>
                                     <td class="image-section">
@@ -107,8 +107,6 @@
                     </div>
 
                 </div>
-
-
             </div>
         </div>
     </div>
