--- a/src/main/resources/templates/create_card.html
+++ b/src/main/resources/templates/create_card.html
@@ -44,7 +44,7 @@
                             <div class="col-xl-5 col-md-6">
                                 <div class="mini-logo text-center my-4">
                                     <a href="./index.html"><img src="../static/images/logo.png" alt=""></a>
-                                    <h4 class="card-title mt-5">Add new card </h4>
+                                    <h4 class="card-title mt-5" style="color: white">Add new card </h4>
                                 </div>
                                 <div class="auth-form card">
                                     <div class="card-body">
